<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8FF4040"
    android:orientation="horizontal"
    tools:context=".NummerKarte">

    <TextView
        android:id="@+id/deutschTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/nummerKarteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/nummerKarteTextView"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/nummerKarteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="55dp" />

    <Button
        android:id="@+id/btnWeiterNummerKarte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nummerKarteEditText"
        android:layout_centerInParent="true"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="50dp"
        android:text="@string/weiterNummerKarteBtn" />

    <TextView
        android:id="@+id/sparKasseTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nummerKarteEditText"
        android:layout_marginTop="301dp"
        android:background="#708090"
        android:text="@string/sparKasseTextView"
        android:textAlignment="center"
        android:textSize="30dp" />
</RelativeLayout>

